_sass/main.sass
$black: #0a0a0a
$dark: #171717
$grey: #4d4d4d
$light: #999999
$white: #e6e6e6 

$serif: Arvo
$sans: Lato
$mono: Lekton
$icon: Lakaxita

=transform($arg)
    transform: ($arg)
    -o-transform: ($arg)
    -webkit-transform: ($arg)
    -moz-transform: ($arg)

h1, h2, h3, h4, h5, h6
    font-family: inherit
    color: inherit
h1, h2
    font-family: $serif
.icon
    font-family: $icon
body
    background: $dark
    font-family: $sans
    position: static
html, body
    height: 90% !important
header
    font-family: $serif
    max-width: 100% !important
    margin: 0 !important
    background: $black
    padding: .4em .4em 1.4em .4em
    z-index: 1
    +grid-row()
    @media #{$medium-up}
        position: fixed
        top: 0
        height: 5em
    h1#title
        color: $white
        margin: -30px 0 0 0
        font-size: 1.7em
        +grid-column($columns:3)
        @media #{$medium-up}
            margin: -50px 0 0 0
        a
            color: $white
            vertical-align: baseline
        a#name
            @media (max-width: 350px)
                display: none
        a#logo
            font-size: 2.5em
            margin-left: .2em
            @media #{$medium-up}
                font-size: 3em
            @media (max-width: 350px)
                margin-left: 0
    ul#social
        text-align: right
        margin: .5rem 0
        padding: 0 !important
        +grid-column($columns:5, $offset:4)
        @media (max-width: 350px)
            +grid-column($columns:7, $offset:2)
        li
            display: inline-block
            list-style: none
            a
                font-size: 1.5em
                color: $light
                line-height: 2.5em
                @media #{$medium-up}
                    font-size: 2em
                    line-height: 1.5em

section#description
    z-index: -1
    position: relative
    color: $white
    margin: 3em 0 !important
    +grid-row($behavior: nest)
    @media #{$medium-up}
        margin: 8em 0 3em 0 !important
    div#description_text
        text-align: justify
        +grid-column($columns:12)
        @media #{$medium-up}
            text-align: right
            +grid-column($columns:5, $offset:1)
        @media #{$large-up}
            +grid-column($columns:4, $offset:2)
        h1
            font-weight: normal
            margin-top: 0 !important
            font-size: 2em
            @media #{$medium-up}
                font-size: 1.5em
    div#description_image
        +grid-column($columns:12)
        @media #{$medium-up}
            +grid-column($columns:3)
        @media #{$large-up}
            +grid-column($columns:2)

div#wrap
    background: $white
    color: $black
    max-width: 100% !important
    padding-bottom: 50px
    +grid-row()
    @media #{$medium-up}
        margin: 5em 0 0 0 !important
    aside
        margin-top: 50px
        +grid-column($columns:12)
        @media #{$large-up}
            +grid-column($columns:3)
        nav
            font-family: $serif
            font-weight: bold
            ul
                margin: 0
                list-style: none
                li
                    background: $dark
                    width: 100%
                    margin: .2em
                    padding: 0 1em
                    a
                        color: $white
                li.category
                    background: scale-lightness(#000, 14%)
    main
        margin: 50px 0 0 0
        padding: 0 20px !important
        +grid-column($columns:12)
        @media #{$large-up}
            padding: 0 50px !important
            +grid-column($columns:9)
        article
            margin: 0 0 3rem 0
        time, a.category
            display: inline-block
            color: $white
            font-family: $serif
            font-size: .8em
            padding: .3em
            font-weight: bold
        time
            background: $light
        a.category
            background: $grey
        h1
            font-size: 1.3rem
            font-weight: bold
            margin: 1rem 0
            color: $black
            a
                color: $black
        h2
            font-size: 1.2rem !important
        h3
            font-size: 1.1em
        code
            font-family: $mono
            color: $grey
        div.prev-next
            margin: 2rem

div#wrap:before
    position: fixed
    content: 'o'
    font-family: $icon
    text-align: center
    padding: 17px
    font-size: 50px
    color: $white
    pointer-events: none
    background: $dark
    border-radius: 50%
    height: 80px
    left: 50%
    +transform(translate(-50%,-50%))
    width: 80px
    z-index: 2

section#description ~ div#wrap:before
    position: absolute
    z-index: 0

footer
    color: $white
    padding: 1em
    max-width: 100% !important
    text-align: center
    +grid-row()
    ul#licenses
        color: $white
        margin: 0
        +grid-column($columns:12)
        @media #{$medium-up}
            text-align: left
            +grid-column($columns:6)
        li
            display: inline-block
            list-style: none
            a
                font-size: 3em
                color: $white
    div#footer_details
        +grid-column($columns:12)
        @media #{$medium-up}
            text-align: right
            +grid-column($columns:6)
        address
            line-height: 1.5em
        a.admin
            color: $dark
        a.admin:hover
            color: $grey

